Perubahan pada intro slide dan optimasi fungsi login (---V1.2.4---)

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -187,7 +187,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/dark_blue"
-                        android:text="Simpan Perubahan"
+                        android:text="Simpan"
                         android:textColor="@color/white" />
                 </LinearLayout>
             </LinearLayout>
