--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,10 @@
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="120dp"
+        android:layout_width="280dp"
         android:layout_height="120dp"
         android:layout_marginTop="48dp"
-        android:src="@drawable/ic_launcher_foreground"
-        android:tint="@color/dark_blue"
+        android:src="@drawable/sinoman"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
