--- a/app/src/main/res/layout/section_shortcut_buttons.xml
+++ b/app/src/main/res/layout/section_shortcut_buttons.xml
@@ -209,7 +209,7 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_headset"
+                            android:src="@drawable/ic_nav_help"
                             app:tint="#FFC107" />
                     </FrameLayout>
 
