--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,37 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="120dp"
     android:background="@color/dark_blue_lighter"
-    android:gravity="bottom"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:scaleType="fitStart"
-        android:src="@drawable/sinoman" />
-
-    <TextView
-        android:id="@+id/userNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="SINOMAN"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sistem Antrean Perumahan"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:id="@+id/logoImageView"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:src="@drawable/sinoman"
+        android:scaleType="fitCenter"
+        android:contentDescription="Logo"
+        android:clickable="false"
+        android:focusable="false" />
 
 </LinearLayout>
 
