--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,15 +44,17 @@
                     android:id="@+id/profileImageView"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:src="@drawable/ic_launcher_foreground" />
+                    android:src="@drawable/ic_nav_profile"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@color/dark_blue" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/changePhotoButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|end"
-                    android:layout_marginEnd="-8dp"
-                    android:layout_marginBottom="-4dp"
+                    android:layout_marginEnd="-3dp"
+                    android:layout_marginBottom="1dp"
                     android:contentDescription="Change profile photo"
                     app:backgroundTint="@color/dark_blue"
                     app:fabSize="mini"
