fix bugs set lokasi (---V1.8.1---)

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -864,6 +864,12 @@
                         android:text="Lokasi akan ditampilkan di sini"
                         android:textColor="@color/dark_gray" />
 
+                    <com.google.android.gms.maps.MapView
+                        android:id="@+id/mapView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="gone" />
+
                     <ImageView
                         android:id="@+id/locationPreviewImage"
                         android:layout_width="match_parent"
